sign up component almost done, missing checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <link rel="icon" href="https://s7.gifyu.com/images/1-project-a-day-favicon2-02-removebg-preview.png" sizes="16x16"
     type="image/png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
   <title>One coding project a day</title>
 </head>
 
